--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native-stack": "^6.9.14",
-    "@stripe/stripe-react-native": "^0.33.0",
+    "@stripe/stripe-react-native": "0.28.0",
     "axios": "^1.5.1",
-    "expo": "~49.0.11",
+    "expo": "^49.0.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-gesture-handler": "^2.13.1",
+    "react-icons": "^4.11.0",
+    "react-native": "0.72.5",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-image-slider-box": "^2.0.7",
-    "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
