--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native-stack": "^6.9.14",
     "@stripe/stripe-react-native": "0.28.0",
     "axios": "^1.5.1",
@@ -25,7 +26,8 @@
     "react-native-image-slider-box": "^2.0.7",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
