--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,9 @@
     "react-native-image-slider-box": "^2.0.7",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-shadow-2": "^7.0.8",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^13.14.0",
     "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
