--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/noto-sans-thai": "^0.2.3",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
@@ -27,11 +28,14 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-fonts": "^0.0.0",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-picker-select": "^8.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.14.0",
+    "react-native-switch-selector": "^2.3.0",
     "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
