--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-icons": "^4.11.0",
     "react-native": "0.72.5",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-fonts": "^0.0.0",
     "react-native-image-slider-box": "^2.0.7",
