--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-native-image-slider-box": "^2.0.7",
     "react-native-pager-view": "^6.2.1",
     "react-native-picker-select": "^8.1.0",
+    "react-native-radio-buttons-group": "^3.0.5",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-select-dropdown": "^3.4.0",
