--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@stripe/stripe-react-native": "0.28.0",
     "axios": "^1.5.1",
     "expo": "^49.0.0",
@@ -32,6 +33,7 @@
     "react-native-google-fonts": "^0.0.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-pager-view": "^6.2.1",
+    "react-native-paper": "^5.10.6",
     "react-native-picker-select": "^8.1.0",
     "react-native-radio-buttons-group": "^3.0.5",
     "react-native-safe-area-context": "4.6.3",
