--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@reduxjs/toolkit": "^1.9.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@stripe/stripe-react-native": "0.28.0",
     "axios": "^1.5.1",
@@ -43,7 +44,9 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.14.0",
     "react-native-switch-selector": "^2.3.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
