--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "expo": "^49.0.0",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "lodash.filter": "^4.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-icons": "^4.11.0",
