--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-native-paper": "^5.10.6",
     "react-native-picker-select": "^8.1.0",
     "react-native-radio-buttons-group": "^3.0.5",
+    "react-native-reanimated": "^2.17.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-select-dropdown": "^3.4.0",
