--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "react-native-svg": "^13.14.0",
     "react-native-switch-selector": "^2.3.0",
     "react-native-tab-view": "^3.5.2",
+    "react-navigation-header-buttons": "^11.1.1",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1"
   },
