--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -23,8 +23,12 @@
     "@stripe/stripe-react-native": "0.28.0",
     "axios": "^1.5.1",
     "expo": "^49.0.0",
+    "expo-auth-session": "~5.0.2",
     "expo-font": "~11.4.0",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.0",
     "lodash.filter": "^4.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
