--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/material-top-tabs": "^6.6.4",
@@ -23,9 +24,10 @@
     "@stripe/stripe-react-native": "0.28.0",
     "axios": "^1.5.1",
     "expo": "^49.0.0",
+    "expo-app-auth": "^12.0.0",
     "expo-auth-session": "~5.0.2",
     "expo-font": "~11.4.0",
-    "expo-google-app-auth": "~8.3.0",
+    "expo-google-app-auth": "^10.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.0",
