--- a/frontend/app.json
+++ b/frontend/app.json
@@ -32,6 +32,7 @@
       },
       "package": "com.anonymous.frontend"
     },
+    "plugins": ["@react-native-google-signin/google-signin"],
     "web": {
       "favicon": "./assets/favicon.png"
     },
