--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "expo-auth-session": "~5.0.2",
     "expo-font": "~11.4.0",
     "expo-google-app-auth": "^10.0.0",
+    "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.0",
@@ -39,6 +40,8 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-fonts": "^0.0.0",
+    "react-native-image-crop-picker": "^0.40.0",
+    "react-native-image-picker": "^7.0.2",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-pager-view": "^6.2.1",
     "react-native-paper": "^5.10.6",
