--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "expo-font": "~11.4.0",
     "expo-google-app-auth": "^10.0.0",
     "expo-image-picker": "~14.3.2",
+    "expo-notifications": "~0.20.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.0",
